# satellitic

./: README.md  local_tles.txt  major_main.py  orbital.py  pyproject.toml  tle_local.txt
doc/: concepts.md  major_main.txt  orbital.txt  satellitic.nix
src/satellitic/: __init__.py  beam.py  constants.py  constellation.py  conversion.py  convert.py  epfd.py  geometry.py  global.py  init.py  iotools.py  power.py  propagate.py  radio.py  simulation.py  special.py  visualise.py  visuals.py
