[build-system]
requires = [ "hatchling >= 1.26", "pandas >= 2.0.3", "numpy >= 1.25.1", "matplotlib >= 3.7.2", "sgp4 >= 2.24", "astropy >= 5.1", "requests >= 2.31.0" ]
build-backend = "hatchling.build"

[project]
name = "satellitic"
version = "0.1.3"
authors = [
  { name="Richard Tjörnhammar", email="richard.tjornhammar@gmail.com" },
]
description = "A collection of satellite methods and approaches to satellite simulations"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/richardtjornhammar/satellitic"
Issues = "https://github.com/richardtjornhammar/satellitic"
